Selecting Fluid>Mesh>"Use Speed Vectors" deletes all existing cache without warning #76881

Closed
opened 2020-05-19 12:47:09 +02:00 by Nicola De Mitri · 8 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: Irrelevant

Blender Version
Broken: 2.83 ff7a30d928 18 May 2020

Short description of error

In the "modular cache" fluid workflow, to a certain extent it is expected that (1) fluid, (2) mesh, (3) particles can be set up and baked at separate stages.

However, Fluid > Mesh > Use speed vectors probably requires a special kind of "fluid" cache with speed vectors enabled. Therefore, clicking on "Use Speed Vectors" immediately, and without a warning, deletes the baked cache. This potentially loses hours of compute work.

Exact steps for others to reproduce the error

  • Open this basic setup
{F8542867}
  • Bake the Data, then select "Use Speed Vectors". The baked data is gone.
 {F8542868}

Possible solutions

Assuming that a new bake of the data is actually needed in order to have speed vectors available, there are two possible solutions and possibly others:

  1. When the user selects "Use Speed Vectors", instead of deleting the cache, just disable ("grey out") the Bake Mesh button and add a message under it that says "⚠️ Baking the Mesh with speed vectors requires a fresh Data bake". This way the user will decide whether they want to free and re-bake, or just give up speed vectors.

  2. (my preferred option) Add a "generate speed vectors" in the Data Bake section, with a tooltip saying "Needed for mesh motion blur" or similar. If the user hasn't generated the speed vectors, the Mesh>"Use speed vectors" checkbox will be disabled, with a tooltip explaining why.

  3. (this sounds like a temporary solution though) Add a much more aggressive message to the current tooltip: "WARNING: if you check this box, your data bake will be lost"

**System Information** Operating system: Ubuntu 18.04 Graphics card: Irrelevant **Blender Version** Broken: 2.83 ff7a30d92884 18 May 2020 **Short description of error** In the "modular cache" fluid workflow, to a certain extent it is expected that (1) fluid, (2) mesh, (3) particles can be set up and baked at separate stages. However, *Fluid > Mesh > Use speed vectors* probably requires a special kind of "fluid" cache with speed vectors enabled. Therefore, clicking on "Use Speed Vectors" immediately, and without a warning, deletes the baked cache. This potentially loses hours of compute work. **Exact steps for others to reproduce the error** - Open this basic setup ``` {F8542867} ``` - Bake the Data, then select "Use Speed Vectors". The baked data is gone. ``` {F8542868} ``` **Possible solutions** Assuming that a new bake of the data is actually needed in order to have speed vectors available, there are two possible solutions and possibly others: 1. When the user selects "Use Speed Vectors", instead of deleting the cache, just disable ("grey out") the Bake Mesh button and add a message under it that says _"⚠️ Baking the Mesh with speed vectors requires a fresh Data bake"_. This way the user will decide whether they want to free and re-bake, or just give up speed vectors. 2. (my preferred option) Add a "generate speed vectors" in the Data Bake section, with a tooltip saying "Needed for mesh motion blur" or similar. If the user hasn't generated the speed vectors, the Mesh>"Use speed vectors" checkbox will be disabled, with a tooltip explaining why. 3. (this sounds like a temporary solution though) Add a much more aggressive message to the current tooltip: "WARNING: if you check this box, your data bake will be lost"

Added subscriber: @NicolaSap

Added subscriber: @NicolaSap
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

#76694 ([Mantaflow] cache is deleted at changing upres factor )
At least the settings are under the same banner, "Mesh".

#76694 ([Mantaflow] cache is deleted at changing upres factor ) At least the settings are under the same banner, "Mesh".
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

@JacquesLucke would 14278cd932 fix this too ?

@JacquesLucke would 14278cd932 fix this too ?

This issue was referenced by a6646fb0d0

This issue was referenced by a6646fb0d02395d100cbaaa8aef7171108e4d2f2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-05-19 15:19:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76881
No description provided.