Fix T76881: Changing "Use Speed Vectors" deletes all existing cache

Reviewers: sebbas